--- a/plugins/userManager/userManager.html
+++ b/plugins/userManager/userManager.html
@@ -2,7 +2,7 @@
 <div xmlns:xf="http://www.w3.org/2002/xforms" class="userManager">
     <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.7.2/dojox/form/resources/CheckedMultiSelect.css"/>
     <div class="messageBar">
-        <p class="message" style="opacity: 0;"/>
+        <p class="message-info" style="opacity: 0;"/>
     </div>
     <div class="userManager-list">
         <div class="toolbar" data-dojo-type="dijit.Toolbar">
