--- a/plugins/packageManager/packageManager.html
+++ b/plugins/packageManager/packageManager.html
@@ -21,4 +21,24 @@
     <div id="listWrapper">
         <ul id="packageList" KdojoType="dojo.dnd.Source" class="container shortView"/>
     </div>
+    <div id="package-upload-dialog" data-dojo-type="dijit.Dialog" title="Upload Packages">
+        <div id="package-upload">
+            <p>To upload: drop one or more files on this dialog or click on the button below.</p>
+            <form class="file_upload" action="modules/install.xql" method="POST" enctype="multipart/form-data">
+                <div class="file_upload_body">
+                    <input type="file" name="uploadedfiles[]" multiple="multiple"/>
+                    <input type="hidden" name="server-url" value="http://demo.exist-db.org/apps/public-repo"/>
+                    <button>Upload</button>
+                    <div class="file_upload_label">Upload</div>
+                </div>
+            </form>
+            <div class="overall-progress" style="opacity: 0">
+                <div class="bar" style="width: 0%;"/>
+                <div class="progress-label">0%</div>
+            </div>
+            <div class="queue">
+                <table class="files"/>
+            </div>
+        </div>
+    </div>
 </div>
