Added reindex action to collection browser

--- a/plugins/browsing/browsing.html
+++ b/plugins/browsing/browsing.html
@@ -5,6 +5,9 @@
             <button id="browsing-toolbar-reload" title="Refresh">
                 <img src="plugins/browsing/images/arrow_refresh.png"/>
             </button>
+            <button id="browsing-toolbar-reindex" title="Reindex collection">
+                <img src="plugins/browsing/images/database_refresh.png"/>
+            </button>
             <button id="browsing-toolbar-new" title="New collection">
                 <img src="plugins/browsing/images/folder_add.png"/>
             </button>
