Repair user manager

--- a/plugins/userManager/userManager.html
+++ b/plugins/userManager/userManager.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div xmlns:xf="http://www.w3.org/2002/xforms" class="userManager">
+<div xmlns:xf="http://www.w3.org/2002/xforms" class="userManager inline-app">
     <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.7.2/dojox/form/resources/CheckedMultiSelect.css"/>
     <div class="messageBar">
         <p class="message-info" style="opacity: 0;"/>
