[ignore] further work in progress, why dont my query bindings work?

--- a/plugins/userManager2/userManager2.html
+++ b/plugins/userManager2/userManager2.html
@@ -11,8 +11,8 @@
                         <div id="userManager-grid-container"/>
                     </div>
                     <div class="userGridButtons">
-                        <button data-dojo-type="dijit.form.Button">Close</button>
-                        <button data-dojo-type="dijit.form.Button">Create</button>
+                        <button class="closeButton" data-dojo-type="dijit.form.Button">Close</button>
+                        <button class="createUser" data-dojo-type="dijit.form.Button">Create</button>
                     </div>
                 </div>
                 <div title="Groups" data-dojo-type="dijit.layout.ContentPane">
@@ -23,8 +23,8 @@
                         <div id="groupManager-grid-container"/>
                     </div>
                     <div class="groupGridButtons">
-                        <button data-dojo-type="dijit.form.Button">Close</button>
-                        <button data-dojo-type="dijit.form.Button">Create</button>
+                        <button class="closeButton2" data-dojo-type="dijit.form.Button">Close</button>
+                        <button class="createGroup" data-dojo-type="dijit.form.Button">Create</button>
                     </div>
                 </div>
             </div>
