--- a/plugins/userManager2/userManager2.html
+++ b/plugins/userManager2/userManager2.html
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div class="userManager2 inline-app">
-    <div class="userManager2stack" data-dojo-type="dijit.layout.StackContainer" data-dojo-id="myStackContainer">
-        <div data-dojo-type="dijit.layout.ContentPane">
-            <div class="userManager2Tabs" data-dojo-type="dijit.layout.TabContainer">
+<div class="userManager2 inline-app" style="width: 100%; height: 100%;">
+    <div id="userManager2stack" data-dojo-type="dijit.layout.StackContainer" data-dojo-id="myStackContainer" style="width: 100%; height: 100%;">
+        <div id="userGroupPage" data-dojo-type="dijit.layout.ContentPane">
+            <div class="userManager2Tabs" data-dojo-type="dijit.layout.TabContainer" style="width: 100%; height: 100%;">
                 <div title="Users" data-dojo-type="dijit.layout.ContentPane">
                     <div class="userManager-list">
                         <div class="toolbar" data-dojo-type="dijit.Toolbar">
@@ -16,7 +16,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="userGridButtons">
+                    <div class="actionButtons">
                         <button id="uCloseButton" data-dojo-type="dijit.form.Button">Close</button>
                         <button id="createUser" data-dojo-type="dijit.form.Button">Create</button>
                     </div>
@@ -34,12 +34,116 @@
                             </div>
                         </div>
                     </div>
-                    <div class="groupGridButtons">
+                    <div class="actionButtons">
                         <button id="gCloseButton" data-dojo-type="dijit.form.Button">Close</button>
                         <button id="createGroup" data-dojo-type="dijit.form.Button">Create</button>
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="newUserPage" data-dojo-type="dijit.layout.ContentPane">
+            <form id="newUser-form" action="" data-dojo-type="dijit.form.Form">
+                <fieldset>
+                    <div>
+                        <span>
+                            <label for="username">User name:</label>
+                        </span>
+                        <span>
+                            <input type="text" name="username" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="username"/>
+                        </span>
+                    </div>
+                    <div>
+                        <span>
+                            <label for="fullName">Full name:</label>
+                        </span>
+                        <span>
+                            <input type="text" name="fullName" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="fullName"/>
+                        </span>
+                    </div>
+                    <div>
+                        <span>
+                            <label for="description">Description:</label>
+                        </span>
+                        <span>
+                            <input type="text" name="description" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="description"/>
+                        </span>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div>
+                        <span>
+                            <label for="userPassword">Password:</label>
+                        </span>  
+                        <span>
+                            <input type="password" name="userPassword" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="userPassword"/>
+                        </span>
+                    </div>
+                    <div>
+                        <span>
+                            <label for="userPasswordRepeat">Confirm password:</label>
+                        </span>
+                        <span>                        
+                            <input type="password" name="userPasswordRepeat" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="userPasswordRepeat"/>
+                        </span>
+                    </div>
+                    <div>
+                        <span>
+                            <label for="disabled">Account is disabled:</label>
+                        </span>
+                        <span>
+                            <input name="disabled" data-dojo-type="dijit.form.CheckBox" value="true" id="disabled"/>
+                        </span>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div>
+                        <span>
+                            <label for="umask">umask:</label>
+                        </span>
+                        <span>
+                            <input name="umask" data-dojo-type="dijit.form.NumberSpinner" value="022" data-dojo-props="smallDelta:1, largeDelta:4, constraints:{min:0, max:777, places:0}" id="umask"/>
+                        </span>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div>
+                        <span>
+                            <label for="personalGroup">Create personal user group:</label>
+                        </span>
+                        <span>
+                            <input name="personalGroup" data-dojo-type="dijit.form.CheckBox" value="true" checked="checked" id="personalGroup"/>
+                        </span>
+                    </div>
+                    <div>
+                        <div class="availableGroupsContainer">
+                            <div>
+                                <label for="availableGroups">Available Groups:</label>
+                            </div>
+                            <div>
+                                <select data-dojo-type="dijit.form.MultiSelect" id="availableGroups" name="availableGroups" size="10">
+                                </select>
+                            </div>
+                        </div>
+                        <div class="groupMembershipActionsContainer">
+                            <button id="addToGroups" data-dojo-type="dijit.form.Button">--&gt;</button>
+                            <button id="removeFromGroups" data-dojo-type="dijit.form.Button">&lt;--</button>
+                        </div>
+                        <div class="memberOfGroupsContainer">
+                            <div>
+                                <label for="availableGroups">Member of Groups:</label>
+                            </div>
+                            <div>
+                                <select data-dojo-type="dijit.form.MultiSelect" id="memberOfGroups" name="memberOfGroups" size="10">
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </fieldset>
+                <div class="actionButtons">
+                    <button id="closeNewUser" data-dojo-type="dijit.form.Button">Close</button>
+                    <button id="createNewUser" data-dojo-type="dijit.form.Button">Create</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
