[feature] load users details into form for editing. Doesnt save yet [feature] when creating a new user, reset the user form contents

--- a/plugins/userManager2/userManager2.html
+++ b/plugins/userManager2/userManager2.html
@@ -72,10 +72,10 @@
                 <fieldset>
                     <div>
                         <span>
-                            <label for="userPassword">Password:</label>
+                            <label for="password">Password:</label>
                         </span>  
                         <span>
-                            <input type="password" name="userPassword" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="userPassword"/>
+                            <input type="password" name="password" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="password"/>
                         </span>
                     </div>
                     <div>
@@ -83,7 +83,7 @@
                             <label for="userPasswordRepeat">Confirm password:</label>
                         </span>
                         <span>                        
-                            <input type="password" name="userPasswordRepeat" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="userPasswordRepeat"/>
+                            <input type="password" name="passwordRepeat" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true" id="passwordRepeat"/>
                         </span>
                     </div>
                     <div>
