[feature] added available groups and member of groups to user forms Just about ready to add in create/save functionality for users

--- a/plugins/userManager2/userManager2.html
+++ b/plugins/userManager2/userManager2.html
@@ -125,8 +125,8 @@
                             </div>
                         </div>
                         <div class="groupMembershipActionsContainer">
-                            <button id="addToGroups" data-dojo-type="dijit.form.Button">--&gt;</button>
-                            <button id="removeFromGroups" data-dojo-type="dijit.form.Button">&lt;--</button>
+                            <button class="switch" id="switchRight" data-dojo-type="dijit.form.Button">--&gt;</button>
+                            <button class="switch" id="switchLeft" data-dojo-type="dijit.form.Button">&lt;--</button>
                         </div>
                         <div class="memberOfGroupsContainer">
                             <div>
@@ -142,6 +142,7 @@
                 <div class="actionButtons">
                     <button id="closeNewUser" data-dojo-type="dijit.form.Button">Close</button>
                     <button id="createNewUser" data-dojo-type="dijit.form.Button">Create</button>
+                    <button id="saveEditedUser" data-dojo-type="dijit.form.Button">Save</button>
                 </div>
             </form>
         </div>
