Split constructor and initialization for all plugins

--- a/plugins/backup/backup.html
+++ b/plugins/backup/backup.html
@@ -4,8 +4,8 @@
         <button class="refresh" data-dojo-type="dijit.form.Button" title="Refresh">
             <img src="plugins/backup/images/arrow_refresh.png"/>
         </button>
-        <button class="download" data-dojo-type="dijit.form.Button" title="Download">
-            <img src="plugins/backup/images/download-32.png"/>
+        <button class="download" data-dojo-type="dijit.form.Button" title="Download selected">
+            <img src="plugins/backup/images/application_get.png"/>
         </button>
     </div>
     <div class="backup-list">
