--- a/plugins/shutdown/shutdown.html
+++ b/plugins/shutdown/shutdown.html
@@ -6,5 +6,5 @@
         <input type="text" name="delay" value="2" size="4"/>
         <button type="submit" data-dojo-type="dijit.form.Button">Shutdown</button>
     </form>
-    <p id="shutdown-message" style="opacity: 0;">Shutdown has been triggered!</p>
+    <p id="shutdown-message" class="message-info" style="opacity: 0;">Shutdown has been triggered!</p>
 </div>
