[feature] show group members in a grid when editing a group [feature] allow the user to change group manager status of a group member (client-side)

--- a/plugins/userManager2/userManager2.html
+++ b/plugins/userManager2/userManager2.html
@@ -184,6 +184,7 @@
                 <div class="actionButtons">
                     <button id="closeNewGroup" data-dojo-type="dijit.form.Button">Close</button>
                     <button id="createNewGroup" data-dojo-type="dijit.form.Button">Create</button>
+                    <button id="saveEditedGroup" data-dojo-type="dijit.form.Button">Save</button>
                 </div>
             </form>
         </div>
