[feature] group member removal (client-side) [feature] start of group member addition (client-side)

--- a/plugins/userManager2/userManager2.html
+++ b/plugins/userManager2/userManager2.html
@@ -188,5 +188,24 @@
                 </div>
             </form>
         </div>
+        <div id="addUserToGroupPage" data-dojo-type="dijit.layout.ContentPane">
+            <form id="addUserToGroup-form" action="" data-dojo-type="dijit.form.Form">
+                <fieldset>
+                    <div>
+                        <span>
+                            <label for="newgroupmember">User:</label>
+                        </span>
+                        <span>
+                            <select data-dojo-type="dijit.form.ComboBox" id="newgroupmember" name="newgroupmember">
+                            </select>
+                        </span>
+                    </div>
+                </fieldset>
+                <div class="actionButtons">
+                    <button id="cancelAddUserToGroup" data-dojo-type="dijit.form.Button">Cancel</button>
+                    <button id="addUserToGroup" data-dojo-type="dijit.form.Button">Ok</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
