--- a/plugins/backup/backup.html
+++ b/plugins/backup/backup.html
@@ -12,13 +12,18 @@
         <div id="backup-grid-container"/>
     </div>
     <form id="backup-form" action="" data-dojo-type="dijit.form.Form">
-        <input type="checkbox" name="zip" data-dojo-type="dijit.form.CheckBox"/> Zip (Don't use for database with more than 4gb)<br/>
-        <input type="checkbox" name="inc" data-dojo-type="dijit.form.CheckBox"/> Incremental<br/>
-        <input type="hidden" name="action" value="trigger"/>
-        <button type="submit" data-dojo-type="dijit.form.Button">Trigger Backup</button>
+        <ul>
+            <li>
+                <input type="checkbox" name="zip" data-dojo-type="dijit.form.CheckBox"/> Zip (Don't use for database with more than 4gb)</li>
+            <li>
+                <input type="checkbox" name="inc" data-dojo-type="dijit.form.CheckBox"/> Incremental</li>
+            <li>
+                <input type="hidden" name="action" value="trigger"/>
+                <button type="submit" data-dojo-type="dijit.form.Button">Trigger Backup</button>
+            </li>
+        </ul>
         <p class="message-info" style="opacity: 0;">A backup has been triggered on the server! If it has not been processed immediately,
             it will be created once all write transactions have completed.
         </p>
     </form>
-    <div data-dojo-id="backup-standby" data-dojo-type="dojox.widget.Standby" data-dojo-props="target:'backup-form'"/>
 </div>
