- changeset of version 0.3.1

--- a/plugins/browsing/browsing.html
+++ b/plugins/browsing/browsing.html
@@ -111,11 +111,15 @@
                         </span>
                     </div>
                     <div>
-                        <div><label for="permissions">Base Permissions</label></div>
+                        <div>
+                            <label for="permissions">Base Permissions</label>
+                        </div>
                         <div id="permissions-grid-container"/>
                     </div>
                     <div>
-                        <div><label for="acl">Access Control List</label></div>
+                        <div>
+                            <label for="acl">Access Control List</label>
+                        </div>
                         <div id="acl-grid-container"/>
                     </div>
                     <div>
