--- a/plugins/userManager/userManager.html
+++ b/plugins/userManager/userManager.html
@@ -225,7 +225,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
                             <label for="newgroupmember">User:</label>
                         </span>
                         <span>
-                            <input id="newgroupmember" name="newgroupmember"></input>
+                            <input id="newgroupmember" name="newgroupmember"/>
                         </span>
                     </div>
                 </fieldset>
