- removed not used/wrong dojoTypes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id="inlineApp"/>
     </div>
     <div id="status"><!-- Status messages --></div>
-    <ul id="appList" dojoType="dojo.dnd.Source" class="container">
+    <ul id="appList" class="container">
         <li id="existIcon" class="twoColumn">
             <div id="existIconFront">
                 <div id="logo"/>
