--- a/plugins/packageManager/packageManager.html
+++ b/plugins/packageManager/packageManager.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div id="listWrapper">
-        <ul id="packageList" KdojoType="dojo.dnd.Source" class="container shortView"/>
+        <ul id="packageList" class="container shortView"/>
     </div>
     <div class="dijitHidden">
         <div id="package-upload-dialog" data-dojo-type="dijit.Dialog" title="Upload Packages">
