--- a/plugins/scheduler/scheduler.html
+++ b/plugins/scheduler/scheduler.html
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <div class="inline-app scheduler">
-    <div id="scheduler-tab-container" data-dojo-type="dijit.layout.TabContainer" style="width: 100%; height: 100%">
-    </div>
+    <div id="scheduler-tab-container" data-dojo-type="dijit.layout.TabContainer" style="width: 100%; height: 100%"/>
 </div>
