User manager: added hint: "right click to edit user/group".

--- a/plugins/userManager/userManager.html
+++ b/plugins/userManager/userManager.html
@@ -45,6 +45,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
                     <div class="actionButtons">
                         <button id="uCloseButton" data-dojo-type="dijit.form.Button">Close</button>
                         <button id="createUser" data-dojo-type="dijit.form.Button">Create</button>
+                        <span class="hint">Right click to edit user</span>
                     </div>
                 </div>
                 <div title="Groups" data-dojo-type="dijit.layout.ContentPane">
@@ -63,6 +64,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
                     <div class="actionButtons">
                         <button id="gCloseButton" data-dojo-type="dijit.form.Button">Close</button>
                         <button id="createGroup" data-dojo-type="dijit.form.Button">Create</button>
+                        <span class="hint">Right click to edit group</span>
                     </div>
                 </div>
             </div>
